// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tab > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-disabled="false"
      aria-selected="false"
      class="styles__rm7scg4"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j"
        />
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`tab > renders correctly with counter, badge and subtitle 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-disabled="false"
      aria-selected="false"
      class="styles__rm7scg4"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j"
        >
          <span
            class="styles__rm7scg5 styles__14m2a200 styles_prominence_default__14m2a202 styles_sentiment_neutral__14m2a207 styles_size_medium__14m2a20e styles_undefined_compound_6__14m2a20n style__1yhcak80 style_prominence_default__1yhcak84 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a"
            style="--whiteSpace__1eu8od81: nowrap;"
          >
            1
          </span>
          <span
            class="styles__rm7scg3"
          >
            badge
          </span>
        </div>
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
        >
          <span
            class="styles_default__rm7scg6 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            subtitle
          </span>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`tab > renders correctly with subtitle 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-disabled="false"
      aria-selected="false"
      class="styles__rm7scg4"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
      >
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j"
        />
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
        >
          <span
            class="styles_default__rm7scg6 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
          >
            test
          </span>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;
